--- a/parte3.html
+++ b/parte3.html
@@ -30,7 +30,7 @@
 
   <section class="acordeao">
       <div class="item">
-          <button class="titulo-creepy">Exemplo 1</button>
+          <button class="titulo-creepy">exemplo 1</button>
           <div class="conteudo-creepy">
               <p class="paragrafo-texto">
                 exemplo~
