--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
       <section class="leftColumn">
         <h2 class="subtitulo">𝐷𝑜 𝑞𝑢𝑒 𝑠𝑒 𝑡𝑟𝑎𝑡𝑎 𝑛𝑜𝑠𝑠𝑜 𝑡𝑟𝑎𝑏𝑎𝑙ℎ𝑜?</h2>
         <p>Nosso trabalho se baseia no Delineamento em Quadrado Latino (DQL), escolhido para controlar os efeitos de dois
-          fatores de variação — linhas e colunas — e avaliar com precisão o efeito de 5 tratamentos sobre a massa seca
+          fatores de variação (linhas e colunas) e avaliar com precisão o efeito de 5 tratamentos sobre a massa seca
           total das mudas.</p>
+      </section>
+
+      <section class="leftColumn">
+        <h2 class="subtitulo">𝐶𝑜𝑛𝑡𝑎𝑠 𝑒 𝑅𝑒𝑠𝑢𝑙𝑡𝑎𝑑𝑜𝑠</h2>
+        <p>As contas serão organizadas e exibidas nas seções 1, 2 e 3, localizadas na parte superior do site. Os resultados correspondentes aparecerão na caixa abaixo.</p>
       </section>
 
      <section class="graficos">
