--- a/parte3.html
+++ b/parte3.html
@@ -26,22 +26,35 @@
   </div>
 </header>
 <main>
-  <h1 class="titulo">Parte 3</h1>
+  <h1 class="titulo">PARTE 3 — Teste F e Conclusões</h1>
 
   <section class="acordeao">
       <div class="item">
-          <button class="titulo-creepy">exemplo 1</button>
+          <button class="titulo-creepy">Cálculo dos Valores de F</button>
           <div class="conteudo-creepy">
-              <p class="paragrafo-texto">
-                exemplo~
-              </p>
+            <p class="paragrafo-texto">Fl = QMl ÷ QMe = 33,02</p>
+            <p class="paragrafo-texto">Fc = QMc ÷ QMe = 1,89</p>
+            <p class="paragrafo-texto">Ft = QMt ÷ QMe = 149,75</p>
+            <p class="paragrafo-texto">F crítico (α = 5%)</p>
+            <p class="paragrafo-texto">F(4;12;5%) ​= 3,26</p>
             
           </div>
       </div>
       <div class="item">
-        <button class="titulo-creepy">exemplo 2</button>
+        <button class="titulo-creepy">Interpretação dos Resultados</button>
         <div class="conteudo-creepy">
-            <p class="paragrafo-texto">exemplo~ </p>
+            <p class="paragrafo-texto">Fonte de variação: Linha (L) -- F calculado: 33,02 -- F crítico: 3,26 -- Conclusão: Significativo</p>
+            <p class="paragrafo-texto">Fonte de variação: Coluna (C) -- F calculado: 1,89 -- F crítico: 3,26 -- Conclusão: Não significativo</p>
+            <p class="paragrafo-texto">Fonte de tratamento: Tratamento (t) -- F calculado: 149,75 -- F crítico: 3,26 -- Conclusão: Altamente significativo</p>
+
+        </div>
+
+      <div class="item">
+        <button class="titulo-creepy">Conclusão Geral do ANOVA</button>
+        <div class="conteudo-creepy">
+            <p class="paragrafo-texto">Rejeita-se H₀ para tratamentos → há diferenças reais entre as médias dos tratamentos.</p>
+            <p class="paragrafo-texto">Linhas apresentam efeito significativo; colunas, não.</p>
+            <p class="paragrafo-texto">Apesar disso, o delineamento em quadrado latino não se mostrou eficiente nas condições estudadas (baixa variação explicada por linhas e colunas em relação aos tratamentos).</p>
 
         </div>
 
@@ -49,7 +62,7 @@
 </main>
 </div>
 
-<!-- Link para o arquivo de script -->
+
 <script src="script.js"></script>
 </body>
 
